# AI-switch

./: .gitignore  AI switch — C++ 高性能 AI 代理网关.md  CMakeLists.txt  README.md  bootstrap.sql  config.json
.claude/: settings.json  settings.local.json
src/: main.cpp
src/adapter/: adapter.h  adapter_factory.cpp  adapter_factory.h  deepseek_adapter.cpp  deepseek_adapter.h
src/db/: connection_pool.cpp  connection_pool.h  repository.cpp  repository.h
src/middleware/: auth_middleware.cpp  auth_middleware.h  log_middleware.cpp  log_middleware.h  middleware.h  rate_limiter.cpp  rate_limiter.h
src/server/: http_server.cpp  http_server.h  router.cpp  router.h  session.cpp  session.h
src/stream/: sse_handler.cpp  sse_handler.h
src/util/: config.cpp  config.h  thread_pool.cpp  thread_pool.h
tests/: test_rate_limiter.cpp
